Make the review correction

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
                 <br>
                 <input type="number" placeholder="your score" id="score">
                 <br>
-                <button>submit</button>
+                <button class="bt">submit</button>
               </form>
             </div>
 
